<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.Holo.Light.CalendarView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/configure" />

    <EditText
        android:id="@+id/appwidget_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Hi!"
        android:inputType="text" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_widget" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Test MD, Holo and Android_DL components without Activity Launcher!"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textSize="24sp" />

            <CalendarView
                android:id="@+id/calendarView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CalendarView
                android:id="@+id/calendarView4"
                style="@android:style/Widget.CalendarView"
                android:layout_width="match_parent"
                android:layout_height="381dp"
                android:background="@color/black_overlay" />

            <ProgressBar
                android:id="@+id/progressBar14"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/progressBar15"
                style="@android:style/Widget.Holo.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/progressBar16"
                style="@android:style/Widget.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RatingBar
                android:id="@+id/ratingBar5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RatingBar
                android:id="@+id/ratingBar6"
                style="@android:style/Widget.Holo.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RatingBar
                android:id="@+id/ratingBar7"
                style="@android:style/Widget.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="5"
                android:numStars="5"
                android:rating="0"
                android:stepSize="0.5" />

            <ProgressBar
                android:id="@+id/progressBar17"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <ProgressBar
                android:id="@+id/progressBar18"
                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <ProgressBar
                android:id="@+id/progressBar19"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/togglebutton" />

            <ToggleButton
                android:id="@+id/toggleButton6"
                style="@android:style/Widget.Holo.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ToggleButton" />

            <ToggleButton
                android:id="@+id/toggleButton7"
                style="@android:style/Widget.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ToggleButton" />

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editTextTime"
                style="@style/Widget.MaterialComponents.TimePicker.Display.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="time" />

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>